--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
-#Thu Jun 23 18:43:26 IDT 2011
+#Thu Jun 23 21:15:56 IDT 2011
 eclipse.preferences.version=1
+encoding//src/s_common.py=utf-8
 encoding//src/s_learning_curve.py=utf-8
+encoding//src/scp.py=utf-8
