word black list

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
-#Thu Jun 23 21:15:56 IDT 2011
+#Thu Jun 23 22:34:40 IDT 2011
 eclipse.preferences.version=1
 encoding//src/s_common.py=utf-8
+encoding//src/s_i_filters.py=utf-8
 encoding//src/s_learning_curve.py=utf-8
 encoding//src/scp.py=utf-8
