--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,8 @@
-#Fri Jun 24 13:31:28 IDT 2011
+#Fri Jun 24 14:36:46 IDT 2011
 eclipse.preferences.version=1
+encoding//src/s_bench_vs_all_ench.py=utf-8
+encoding//src/s_bench_vs_all_simple.py=utf-8
+encoding//src/s_bench_vs_test.py=utf-8
 encoding//src/s_common.py=utf-8
 encoding//src/s_learning_curve.py=utf-8
 encoding//src/scp.py=utf-8
