--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
-#Fri Jun 24 18:45:30 IDT 2011
+#Fri Jun 24 19:21:31 IDT 2011
 eclipse.preferences.version=1
+encoding//src/s_analyzie_topics.py=utf-8
 encoding//src/s_bench_vs_all_ench.py=utf-8
 encoding//src/s_bench_vs_all_simple.py=utf-8
 encoding//src/s_bench_vs_our.py=utf-8
